[gd_scene load_steps=10 format=3 uid="uid://dok8emds0xdxk"]

[ext_resource type="Texture2D" uid="uid://sd6eo8r4wj67" path="res://assets/art/backgrounds/blank_background.png" id="1_jcfpm"]
[ext_resource type="Script" path="res://UI/menus/main_menu.gd" id="1_sj5tw"]
[ext_resource type="Texture2D" uid="uid://xmjyfyuvxtbo" path="res://assets/art/player/plague_dr_title.png" id="3_noiff"]
[ext_resource type="Texture2D" uid="uid://bbmorkf4p4s2h" path="res://assets/art/items/element_icons.png" id="4_e4tgi"]
[ext_resource type="AudioStream" uid="uid://s0f5k4886jm1" path="res://music/main_ost/Vial Elements - Main menu.mp3" id="5_5fojy"]

[sub_resource type="LabelSettings" id="LabelSettings_2plxb"]
font_size = 120

[sub_resource type="Animation" id="Animation_ndfun"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root/Pivot/FireSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root/Pivot/WaterSprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Root/Pivot/AirSprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Root/Pivot/EarthSprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6yjl8"]
resource_name = "start_animation"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Root/Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Root/Pivot/FireSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Root/Pivot/WaterSprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Root/Pivot/AirSprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Root/Pivot/EarthSprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cxxgp"]
_data = {
"RESET": SubResource("Animation_ndfun"),
"start_animation": SubResource("Animation_6yjl8")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_sj5tw")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_jcfpm")
centered = false

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonBackgroundPanel" type="Panel" parent="UI/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -191.0
offset_top = -503.0
offset_right = 209.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/ButtonBackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="UI/Control/ButtonBackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="StoryButton" type="Button" parent="UI/Control/ButtonBackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Story"

[node name="ControlsButton" type="Button" parent="UI/Control/ButtonBackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Controls"

[node name="Options" type="Button" parent="UI/Control/ButtonBackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Options"

[node name="QuitButton" type="Button" parent="UI/Control/ButtonBackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Quit"

[node name="Label1" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 246.0
offset_top = 163.0
offset_right = 457.0
offset_bottom = 328.0
text = "Vial
"
label_settings = SubResource("LabelSettings_2plxb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 1300.0
offset_top = 168.0
offset_right = 1834.0
offset_bottom = 333.0
text = "Elements"
label_settings = SubResource("LabelSettings_2plxb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Root" type="Node2D" parent="."]
position = Vector2(964, 278)
scale = Vector2(5, 5)

[node name="CharSprite" type="Sprite2D" parent="Root"]
scale = Vector2(2, 2)
texture = ExtResource("3_noiff")

[node name="Pivot" type="Marker2D" parent="Root"]

[node name="FireSprite" type="Sprite2D" parent="Root/Pivot"]
position = Vector2(0, 40)
texture = ExtResource("4_e4tgi")
hframes = 6
frame = 2

[node name="WaterSprite" type="Sprite2D" parent="Root/Pivot"]
position = Vector2(40, 0)
texture = ExtResource("4_e4tgi")
hframes = 6
frame = 1

[node name="AirSprite" type="Sprite2D" parent="Root/Pivot"]
position = Vector2(-40, 0)
texture = ExtResource("4_e4tgi")
hframes = 6
frame = 3

[node name="EarthSprite" type="Sprite2D" parent="Root/Pivot"]
position = Vector2(0, -40)
texture = ExtResource("4_e4tgi")
hframes = 6
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_cxxgp")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5fojy")
volume_db = -12.0
autoplay = true

[connection signal="pressed" from="UI/Control/ButtonBackgroundPanel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
